fixed z-indexes

--- a/src/styles/components/modals/pricingModal.scss
+++ b/src/styles/components/modals/pricingModal.scss
@@ -18,7 +18,7 @@ $shadow-light: rgba(0, 0, 0, 0.15);
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
+  z-index: 10000;
 }
 
 .pricing-modal {
