--- a/src/styles/components/modals/registrationModal.scss
+++ b/src/styles/components/modals/registrationModal.scss
@@ -18,7 +18,7 @@ $shadow-color: rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
+  z-index: 10000;
 }
 
 .registration-modal {
